scrollbar fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,8 +31,7 @@ main {
     flex-direction: column;
     margin-block-start: 8rem;
     min-height: 100dvh;
-    position: relative;
-    left: calc((100vw - 100%) / 2);
+    width: 100%;
 }
 
 .flow>*+* {
